--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,11 @@
   <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
   <h3>Contact</h3>
-  
+  <!-- map -->
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d83998.94722676693!2d2.
+  2775169491687453!3d48.85883773918851!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
+  1!3m3!1m2!1s0x0%3A0x791dd61b089f98b!2sLe+Jardin+du+Luxembourg!5e0!3m2!1sfr!2sdz!4v1487715623816"
+   width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+
 </body>
 </html>
