--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,19 @@
   2775169491687453!3d48.85883773918851!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
   1!3m3!1m2!1s0x0%3A0x791dd61b089f98b!2sLe+Jardin+du+Luxembourg!5e0!3m2!1sfr!2sdz!4v1487715623816"
    width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+ <!-- contact form -->
 
+   <form
+        action="#" method="post" >
+        <label for="fullname">Name</label>
+  <input type="text" id="fullname" name="fullname" placeholder="your name" required>
+  <label for="email">Email</label>
+  <input type="email" id="email" name="email" placeholder="your email" required>
+  <label for="phone">Phone</label>
+  <input type="tel" id="phone" name="phone" placeholder="your phone (optional)">
+  <label for="message">Message</label>
+  <textarea id="message" name="message" rows="10"></textarea>
+  <input type="submit" value="send">
+     </form>
 </body>
 </html>
